# 2209

./: .gitignore  CLAUDE.md
src/: vision_taxi_car.py
src/aircraft_taxi_control/: package.xml  setup.cfg  setup.py
src/aircraft_taxi_control/aircraft_taxi_control/: base_controller.py  line_follower.py
src/aircraft_taxi_control/models/: best.pt
src/aircraft_taxi_description/: CMakeLists.txt  package.xml
src/aircraft_taxi_description/launch/: display.launch.py
src/aircraft_taxi_description/urdf/: aircraft_taxi.urdf.xacro
src/aircraft_taxi_gazebo/: CMakeLists.txt  package.xml
src/aircraft_taxi_gazebo/launch/: gazebo_spawn.launch.py  line_follower.launch.py
src/aircraft_taxi_gazebo/worlds/: empty_ground.world  runway.world
src/aircraft_taxi_safety/: package.xml  setup.cfg  setup.py
